--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
     <div class="new-slider">
-        <div class="swiper mySwiper">
+        <div class="swiper mySwiper1">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="jv-list-item">
@@ -269,36 +269,179 @@
                         </div>
                     </div>
                 </div>
-                    <div class="btn-primary" data-aos="fade-up"><a href="/id/videos/" class="btn-video">
-                        See More          </a></div>
+                <div class="btn-primary" data-aos="fade-up"><a href="/id/videos/" class="btn-video">
+                        See More </a></div>
+            </div>
+            <!-- NEWS -->
+            <div class="news">
+                <div class="title">
+                    <div class="tittle-kiri">
+                        <span>
+                            <h1>News</h1>
+                        </span>
                     </div>
-    <!-- NEWS -->
-    <div class="news">
-        <div class="title">
-            <div class="tittle-kiri">
-                <span>
-                    <h1>News</h1>
-                </span>
-            </div>
-            </div>
+                </div>
+                <div class="news-content">
+                    <div class="jv-wrapper-news">
+                        <div class="jv-list list-news">
+                            <!--Item-->
+                            <div class="news-kiri">
+                                <div class="jv-desc-item">
+                                    <div class="jv-desc-img news-1"> <a href="https://japanview.tv/id/news/19711/"></a>
+                                    </div>
+                                    <div class="jv-desc-body body-news">
+                                        <div class="jv-desc-txt">
+                                            <p><a href="https://japanview.tv/id/news/19711/">
+                                                    Pokémon Festival Jakarta 2022! Ada Keseruan Apa Saja Ya? </a>
+                                            </p>
+                                        </div>
+                                        <div class="jv-desc-date">
+                                            <p>2022.12.19</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--//Item-->
+                                <!--Item-->
+                                <div class="jv-desc-item">
+                                    <div class="jv-desc-img news-2"> <a href="https://japanview.tv/id/news/19681/"></a>
+                                    </div>
+                                    <div class="jv-desc-body body-news">
+                                        <div class="jv-desc-txt">
+                                            <p><a href="https://japanview.tv/id/news/19681/">
+                                                    “戦” (Sen) Terpilih sebagai Kanji of the Year Jepang Tahun 2022 </a>
+                                            </p>
+                                        </div>
+                                        <div class="jv-desc-date">
+                                            <p>2022.12.16</p>
+                                        </div>
 
-        </div>
-    </div>
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--//Item-->
+                            <!--Item-->
+                            <div class="news-kanan">
+                                <div class="jv-desc-item">
+                                    <div class="jv-desc-img news-3"> <a href="https://japanview.tv/id/news/19568/"></a>
+                                    </div>
+                                    <div class="jv-desc-body body-news">
+                                        <div class="jv-desc-txt">
+                                            <p><a href="https://japanview.tv/id/news/19568/">
+                                                    Intip Acara “Seiyuu ni Narou! Let’s Be a Voice Actor!” di BINUS
+                                                    University </a>
+                                            </p>
+                                        </div>
+                                        <div class="jv-desc-date">
+                                            <p>2022.12.08</p>
+                                        </div>
+                                    </div>
 
-    <!-- Initialize Swiper -->
-    <script>
-        var swiper = new Swiper(".mySwiper", {
-            loop: true,
-            centeredSlides: true,
-            loopedSlides: 5,
-            slidesPerView: 1,
-            autoplay: {
-                delay: 3000,
-            },
-        });
-    </script>
+                                </div>
+                                <!--//Item-->
+                                <!--Item-->
+                                <div class="jv-desc-item">
+                                    <div class="jv-desc-img news-4"> <a href="https://japanview.tv/id/news/19501/"></a>
+                                    </div>
+                                    <div class="jv-desc-body body-news">
+                                        <div class="jv-desc-txt">
+                                            <p><a href="https://japanview.tv/id/news/19501/">
+                                                    Kunjungan ke Universitas Padjadjaran dan Universitas Pendidikan
+                                                    Indonesia </a>
+                                            </p>
+                                        </div>
+                                        <div class="jv-desc-date">
+                                            <p>2022.11.22</p>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <!--//Item-->
+                        </div>
+                        <!--More-->
+                        <div class="btn-primary" data-aos="fade-up"><a href="/id/topics/?topics_category=feature"
+                                class="btn-feature">
+                                See More </a></div>
+                    </div>
+                </div>
+            </div>
+            <!-- Article -->
+            <div class="article">
+                <di v class="title">
+                    <div class="tittle-kiri">
+                        <span>
+                            <h1>Articles</h1>
+                        </span>
+                    </div>
+            </div>
+            <div class="article-content">
+                <div class="swiper mySwiper2">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="jv-article-item">
+                                <div class="jv-article-img img-1">
+                                    <a href="https://japanview.tv/id/topics/19960/"></a>
+                                    <div class="jv-article-body">
+                                        <div class="jv-article-title">
+                                            <p><a href="https://japanview.tv/id/topics/19960/">
+                                                    Pelopor Universitas Internasional! Universitas Takushoku Penghubung
+                                                    Jepang dan Indonesia </a>
+                                                <span class="excerpt">
+                                                    Berdiri sejak tahun 1900, Universitas Takushoku berfokus dalam
+                                                    pengembangan sumber... </span>
+                                            </p>
+                                        </div>
+                                        <div class="jv-article-date">
+                                            <p>2023.01.11</p>
+                                        </div>
+
+                                        <div class="jv-article-txt">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination swiper-pagination2"></div>
+
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
+            </div>
+            <!--More-->
+            <div class="btn-primary" data-aos="fade-up"><a href="/id/topics/?topics_category=feature"
+                    class="btn-feature">
+                    See More </a></div>
+            <!-- Swiper JS -->
+            <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+            <!-- Initialize Swiper -->
+            <script>
+                var swiper = new Swiper(".mySwiper1", {
+                    loop: true,
+                    centeredSlides: true,
+                    loopedSlides: 5,
+                    slidesPerView: 1,
+                    autoplay: {
+                        delay: 3000,
+                    },
+                });
+                var swiper = new Swiper('.myswiper2', {
+                    // Optional parameters
+                    loop: true,
+
+                    // If we need pagination
+                    pagination: {
+                        el: '.swiper-pagination2', type: 'bullets',
+                    },
+                    navigation: {
+                        nextEl: '.swiper-button-next',
+                        prevEl: '.swiper-button-prev',
+                    },
+                });
+            </script>
 </body>
 
 </html>
