--- a/index.html
+++ b/index.html
@@ -379,41 +379,159 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="jv-article-item">
-                                <div class="jv-article-img img-1">
+                                <div class="jv-article-img-1 img-1">
                                     <a href="https://japanview.tv/id/topics/19960/"></a>
                                     <div class="jv-article-body">
-                                        <div class="jv-article-title">
+                                        <div class="jv-article-txt">
                                             <p><a href="https://japanview.tv/id/topics/19960/">
                                                     Pelopor Universitas Internasional! Universitas Takushoku Penghubung
                                                     Jepang dan Indonesia </a>
-                                                <span class="excerpt">
+                                                <div class="excerpt">
                                                     Berdiri sejak tahun 1900, Universitas Takushoku berfokus dalam
-                                                    pengembangan sumber... </span>
+                                                    pengembangan sumber... </div>
                                             </p>
                                         </div>
                                         <div class="jv-article-date">
                                             <p>2023.01.11</p>
                                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="swiper-slide">
+                            <div class="jv-article-item">
+                                <div class="jv-article-img-2 img-2">
+                                    <a href="https://japanview.tv/id/topics/16059/"></a>
+                                    <div class="jv-article-body">
                                         <div class="jv-article-txt">
+                                            <p><a href="https://japanview.tv/id/topics/16059/">
+                                                    Belajar Desain Grafis </a>
+                                                <div class="excerpt">
+                                                    Mulai dari seni, iklan, hingga smartphone, kehidupan kita tak pernah... </div>
+                                            </p>
+                                        </div>
+                                        <div class="jv-article-date">
+                                            <p>2021.09.30</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="swiper-slide">
+                            <div class="jv-article-item">
+                                <div class="jv-article-img-3 img-3">
+                                    <a href="https://japanview.tv/id/topics/15880/"></a>
+                                    <div class="jv-article-body">
+                                        <div class="jv-article-txt">
+                                            <p><a href="https://japanview.tv/id/topics/15880/">
+                                                Belajar Bahasa Jepang </a>
+                                                <div class="excerpt">
+                                                    Bahasa Jepang cukup terkenal dari berbagai negara dikarenakan anime dan...</div>
+                                            </p>
+                                        </div>
+                                        <div class="jv-article-date">
+                                            <p>2021.09.29</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="jv-article-item">
+                                <div class="jv-article-img-4 img-4">
+                                    <a href="https://japanview.tv/id/topics/14449/"></a>
+                                    <div class="jv-article-body">
+                                        <div class="jv-article-txt">
+                                            <p><a href="https://japanview.tv/id/topics/14449/">
+                                                Belajar Anime dan Manga </a>
+                                                <div class="excerpt">
+                                                    Mulai dari seni, iklan, hingga smartphone, kehidupan kita tak pernah... </div>
+                                            </p>
+                                        </div>
+                                        <div class="jv-article-date">
+                                            <p>2021.09.21</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
                     </div>
-                    <!-- If we need pagination -->
-                    <div class="swiper-pagination swiper-pagination2"></div>
-
                     <!-- If we need navigation buttons -->
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination swiper-pagination2"></div>
                 </div>
             </div>
             <!--More-->
             <div class="btn-primary" data-aos="fade-up"><a href="/id/topics/?topics_category=feature"
                     class="btn-feature">
                     See More </a></div>
+                    <!-- LEARN JAPANESE -->
+            <div class="learn-japanese">
+                <div class="title">
+                    <div class="tittle-kiri">
+                        <span>
+                            <h1>Learn Japanese</h1>
+                        </span>
+                    </div>
+                </div>
+                <div class="lj-content">
+                    <div class="jv-wrapper-news">
+                        <div class="jv-list list-news">
+                            <!--Item-->
+                            <div class="news-kiri">
+                                <div class="jv-desc-item">
+                                    <div class="jv-desc-img lj-1"> <a href="https://japanview.tv/id/learn_japanese/19734/"></a>
+                                    </div>
+                                    <div class="jv-desc-body body-news">
+                                        <div class="jv-desc-txt">
+                                            <p><a href="https://japanview.tv/id/learn_japanese/19734/">
+                                                Universitas Bina Nusantara (BINUS University) </a>
+                                            </p>
+                                        </div>
+                                        <div class="jv-desc-date">
+                                            <p>2022.12.19</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--//Item-->
+                                <!--Item-->
+                                <div class="jv-desc-item">
+                                    <div class="jv-desc-img lj-3"> <a href="https://japanview.tv/id/learn_japanese/19720/"></a>
+                                    </div>
+                                    <div class="jv-desc-body body-news">
+                                        <div class="jv-desc-txt">
+                                            <p><a href="https://japanview.tv/id/learn_japanese/19720/">
+                                                Universitas Darma Persada</a>
+                                            </p>
+                                        </div>
+                                        <div class="jv-desc-date">
+                                            <p>2022.12.19</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                                <!--//Item-->
+                                <!--Item-->
+                            <div class="news-kanan">
+                                <div class="jv-desc-item">
+                                    <div class="jv-desc-img lj-2"> <a href="https://japanview.tv/id/learn_japanese/19647/"></a>
+                                    </div>
+                                    <div class="jv-desc-body body-news">
+                                        <div class="jv-desc-txt">
+                                            <p><a href="https://japanview.tv/id/learn_japanese/19647/">
+                                                Universitas Al-Azhar Indonesia</a>
+                                            </p>
+                                        </div>
+                                        <div class="jv-desc-date">
+                                            <p>2022.12.15</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--//Item-->
             <!-- Swiper JS -->
             <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
@@ -428,7 +546,7 @@
                         delay: 3000,
                     },
                 });
-                var swiper = new Swiper('.myswiper2', {
+                var swiper = new Swiper('.mySwiper2', {
                     // Optional parameters
                     loop: true,
 
